// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/steps/demo/clickable.md correctly 1`] = `
Array [
  <div
    class="ant-steps ant-steps-vertical"
  />,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-steps ant-steps-vertical"
  />,
]
`;

exports[`renders ./components/steps/demo/customized-progress-dot.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-dot"
/>
`;

exports[`renders ./components/steps/demo/error.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
/>
`;

exports[`renders ./components/steps/demo/icon.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
/>
`;

exports[`renders ./components/steps/demo/label-placement.md correctly 1`] = `
Array [
  <div
    class="ant-steps ant-steps-vertical"
  />,
  <br />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-with-progress"
  />,
  <br />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-small"
  />,
]
`;

exports[`renders ./components/steps/demo/nav.md correctly 1`] = `
Array [
  <div
    class="ant-steps ant-steps-vertical site-navigation-steps ant-steps-small ant-steps-navigation"
  />,
  <div
    class="ant-steps ant-steps-vertical site-navigation-steps ant-steps-navigation"
  />,
  <div
    class="ant-steps ant-steps-vertical site-navigation-steps ant-steps-small ant-steps-navigation"
  />,
]
`;

exports[`renders ./components/steps/demo/progress.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-with-progress"
/>
`;

exports[`renders ./components/steps/demo/progress-debug.md correctly 1`] = `
Array [
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Percentage to undefined
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Percentage +
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Current +
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Status Wait
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Status Process
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Status Finish
    </span>
  </button>,
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Status Error
    </span>
  </button>,
  <div
    class="ant-steps ant-steps-vertical ant-steps-with-progress"
  />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-with-progress ant-steps-small"
  />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-with-progress"
  />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-with-progress ant-steps-small"
  />,
]
`;

exports[`renders ./components/steps/demo/progress-dot.md correctly 1`] = `
Array [
  <div
    class="ant-steps ant-steps-vertical ant-steps-dot"
  />,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-dot"
  />,
]
`;

exports[`renders ./components/steps/demo/progress-dot-small.md correctly 1`] = `
Array [
  <div
    class="ant-steps ant-steps-vertical ant-steps-small ant-steps-dot"
  />,
  <div
    class="ant-divider ant-divider-horizontal"
    role="separator"
  />,
  <div
    class="ant-steps ant-steps-vertical ant-steps-small ant-steps-dot"
  />,
]
`;

exports[`renders ./components/steps/demo/simple.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
/>
`;

exports[`renders ./components/steps/demo/small-size.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-small"
/>
`;

exports[`renders ./components/steps/demo/step-next.md correctly 1`] = `
Array [
  <div
    class="ant-steps ant-steps-vertical"
  />,
  <div
    class="steps-content"
  >
    First-content
  </div>,
  <div
    class="steps-action"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Next
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/steps/demo/steps-in-steps.md correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
    style="margin-bottom: 16px;"
  >
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="default"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Default
      </span>
    </label>
  </div>,
  <div
    class="ant-steps ant-steps-vertical ant-steps-default"
  />,
]
`;

exports[`renders ./components/steps/demo/vertical.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical"
/>
`;

exports[`renders ./components/steps/demo/vertical-small.md correctly 1`] = `
<div
  class="ant-steps ant-steps-vertical ant-steps-small"
/>
`;
